# llm-fraud-detection

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_Editor  README.md  docker-compose.yml
package/: Cargo.toml  CategoricalNbModel.bin.REMOVED.git-id  RandomForestRegressor.bin.REMOVED.git-id  RandomForestRegressorTopicsAndCustomFeatures.bin.REMOVED.git-id  extract_topics.sh  feature_importance.txt  feature_importance_nn_topics_only.json  feature_importance_random_forest_topics_only.json  huggingface.py  language_model_extract_topics_data_gen_v1 (proposals).json  language_model_extract_topics_data_gen_v1.json.REMOVED.git-id  language_model_extract_topics_data_gen_v1_(enronSpamSubset).json.REMOVED.git-id  language_model_extract_topics_data_gen_v1_(proposals_all).json  language_model_extract_topics_data_gen_v3_(completeSpamAssassin).json.REMOVED.git-id  language_model_extract_topics_data_gen_v3_(enronSpamSubset).json.REMOVED.git-id  language_model_extract_topics_data_gen_v3_(governance_proposal_spam_ham).json  language_model_extract_topics_data_gen_v3_(lingSpam).json.REMOVED.git-id  language_model_extract_topics_data_gen_v3_(proposals_all).json.REMOVED.git-id  language_model_extract_topics_data_gen_v3_(smsspamcollection).json  language_model_extract_topics_data_gen_v3_(youtubeSpamCollection).json  language_model_extract_topics_data_gen_v4_(completeSpamAssassin).json.REMOVED.git-id  language_model_extract_topics_data_gen_v4_(enronSpamSubset).json.REMOVED.git-id  language_model_extract_topics_data_gen_v4_(governance_proposal_spam_likelihood).json  language_model_extract_topics_data_gen_v4_(governance_proposal_spam_likelihood).json.REMOVED.git-id  language_model_extract_topics_data_gen_v4_(lingSpam).json.REMOVED.git-id  language_model_extract_topics_data_gen_v4_(smsspamcollection).json  language_model_extract_topics_data_gen_v4_(smsspamcollection).json.REMOVED.git-id  language_model_extract_topics_data_gen_v4_(youtubeSpamCollection).json  language_model_extract_topics_data_gen_v5_(completeSpamAssassin).json.REMOVED.git-id  language_model_extract_topics_data_gen_v5_(enronSpamSubset).json.REMOVED.git-id  language_model_extract_topics_data_gen_v5_(governance_proposal_spam_likelihood).json.REMOVED.git-id  language_model_extract_topics_data_gen_v5_(lingSpam).json.REMOVED.git-id  language_model_extract_topics_data_gen_v5_(smsspamcollection).json.REMOVED.git-id  language_model_extract_topics_data_gen_v5_(youtubeSpamCollection).json.REMOVED.git-id  sentiment_extract_sentiments_data_gen_v1 (proposals).json  sentiment_extract_sentiments_data_gen_v1.json.REMOVED.git-id  sentiment_extract_sentiments_data_gen_v1_(enronSpamSubset).json.REMOVED.git-id  sentiment_extract_sentiments_data_gen_v1_(proposals_all).json  sentiment_extract_sentiments_data_gen_v3_(completeSpamAssassin).json.REMOVED.git-id  sentiment_extract_sentiments_data_gen_v3_(governance_proposal_spam_ham).json  (+16 more)
package/dataset/: completeSpamAssassin.csv.REMOVED.git-id  enronSpamSubset.csv.REMOVED.git-id  governance_proposal_spam_ham.csv  governance_proposal_spam_likelihood.csv  lingSpam.csv.REMOVED.git-id  proposals.csv  smsspamcollection.csv  youtubeSpamCollection.csv
package/src/: lib.rs  main.rs
package/src/cache/: mod.rs
package/src/service/: mod.rs
package/src/service/socket/: mod.rs
socket_ipc/: Cargo.toml
socket_ipc/src/ipc/: mod.rs
