[package]
name = "rust-bert-fraud-detection"
authors = ["Philipp Schlütermann <philipp.schluetermann@udo.edu>"]
description = "robust fraud detection using NLP topic extraction"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]
# https://doc.rust-lang.org/cargo/reference/cargo-targets.html
name = "rust_bert_fraud_detection_tools"
path = "src/lib.rs"

[[bin]]
name = "rust_bert_fraud_detection"
path = "src/main.rs"


[dependencies]
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
anyhow = "1.0"
bincode = "1.3.3"
itertools = {version = "0.10.5"}
csv = {version = "1.1"}
rust-bert = {version = "0.19.0"}
smartcore = {version = "0.2.1", features=["serde"]}
ndarray = {version = "0.15.0"}
rand = {version = "0.8.5"}
regex = {version = "1.6.0"}
lazy_static = {version = "1.4.0"}
words-count = {version = "0.1.3"}
rust-bert-fraud-detection-socket-ipc = {path = "../socket_ipc" }
