[package]
name = "llm-fraud-detection"
authors = ["Philipp Schlütermann <philipp.schluetermann@udo.edu>"]
description = "robust fraud detection using llama.cpp"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["rlib"]
name = "rust_bert_fraud_detection_tools"
path = "src/lib.rs"

[[bin]]
name = "llm_fraud_detection"
path = "src/main.rs"


[dependencies]
importance = { git="https://github.com/philipp-sc/importance.git" }
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
anyhow = "1.0"
csv = {version = "1.1"}
smartcore = {version = "0.2.1", features=["serde"]}
rand = {version = "0.8.5"}
regex = {version = "1.6.0"}
lazy_static = {version = "1.4.0"}
rayon = "1.7.0"
tokio = { version = "1.18.5", features = ["sync", "macros","rt-multi-thread"]  }

[profile.release]
# Enable link-time optimization, eliminates more code and inlines across crate boundaries.
# Default: false
lto = true

# codegen-units of 1 gives best optimization, but disables parallel building.
# Default: 16
codegen-units = 1

# The default optimization level is 3 for release mode builds.
# 0 means disable optimization and is the default for debug mode buids.
# (Setting opt-level=1 for debug builds is a good way of speeding them up a bit.)
# "s" means optimize for size, "z" reduces size even more.
opt-level = 3

