[package]
name = "rust-bert-fraud-detection-socket-ipc"
authors = ["Philipp Schlütermann <philipp.schluetermann@udo.edu>"]
description = "UNIX Socket ICP for rust-bert-fraud-detection"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]
# https://doc.rust-lang.org/cargo/reference/cargo-targets.html
name = "rust_bert_fraud_detection_socket_ipc"
path = "src/lib.rs"


[dependencies]
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
anyhow = "1.0"
bincode = "1.3.3"

[features]
default = []